--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
 }
 body {
+  padding: 15px;
   display: flex;
   justify-content: center;
   background-color: #333;
@@ -11,9 +12,38 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 
+.back-btn {
+  margin-bottom: 20px;
+}
+
 .App {
   margin-top: 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+h2 {
+  margin-bottom: 15px;
+}
+span {
+  margin-bottom: 15px;
+}
+
+.inputText {
+  padding: 10px;
+  border-radius: 10px;
+  border: 1px solid rgb(242, 241, 230);
+  color: rgb(242, 241, 230);
+  background: none;
+}
+
+.next-btn {
+  margin-top: 20px;
+}
+
+.err-span {
+  color: red;
+  font-size: 14px;
+  margin-top: 5px;
 }
